@@ -1,3 +1,10 @@
+2009-06-18  Ethan A Merritt <merritt@u.washington.edu>
+
+	* src/pm3d.c (set_plot_with_palette is_plot_with_colorbox):
+	Fix an accounting error that caused unnecessary loading of a color
+	palette into plots that do not need one.
+	Backport of V4.4 patch from 2009-01-02
+
 2009-06-04  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/mouse.c:  The following test script triggered multiple problems.
